--- a/doc/thesis/discussion.tex
+++ b/doc/thesis/discussion.tex
@@ -1,6 +1,6 @@
-\chapter{Discussion}
+\chapter{Discussion and Conclusions}
 \label{sec:Discussion}
-\section{Review of Results}
+\section{Overview of Results}
 % Overview of results
 %% Parameters under-constrained
 %% Output estimates good
@@ -62,7 +62,7 @@ large swings in parameters.
 %%% Real time
 %%% Full Posterior
 %%% More intuitive
-\section{Particle Filter Review}
+\subsection{Particle Filter Review}
 The Particle Filter algorithm was originally designed for on-line parameter
 estimation. For this reason, there is no guarantee of optimality or even
 convergence for finite measurements. However, for the BOLD nonlinear ODE
@@ -158,7 +158,7 @@ well and does not require burdensome amounts of memory (approximately 11 megabyt
 %Thus it does not necessarily improve the results. In tests, it did reduce the
 %final covariance but did not lead to better estimates.
 
-\chapter{Future Work}
+\subsection{Future Work}
 \label{sec:FutureWork}
 % Enhancements/Dehancements
 %% prior
@@ -173,7 +173,7 @@ well and does not require burdensome amounts of memory (approximately 11 megabyt
 %%% Variations in stimuli
 %%% longer timeseries or artificial
 %%% Automatic estimation of measurement error.
-\section{Algorithm Improvements}
+\subsection{Algorithm Improvements}
 \label{sec:Particle Filter Variations}
 There are a few areas where future research may improve upon the current
 work. The first is modifying the prior
