--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -198,14 +198,19 @@ List of Acronyms
 \acro{EM}{Expectation-Maximization}
 \acro{EPI}{Echo Planar Imaging}
 \acro{fMRI}{Functional Magnetic Resonance Imaging}
+\acro{FWHM}{Full-Width Half-Maximum}
 \acro{GA}{Genetic Algorithms}
 \acro{GLM}{General Linear Model}
 \acro{HRF}{Hemodynamic Response Function}
 \acro{Hb}{Hemoglobin}
+\acro{MAD}{Median Absolute Deviation}
 \acro{MR}{Magnetic Resonance}
 \acro{MRI}{Magnetic Resonance Imaging}
 \acro{O2Hb}{Oxygenated Hemoglobin}
+\acro{PDF}{Probability Density Function}
 \acro{RF}{Radio Frequency}
+\acro{RMSE}{Root Mean Squared Error}
+\acro{RMSR}{Root Mean Squared Residual}
 \acro{SA}{Simulated Annealing}
 \acro{SNR}{Signal-to-Noise Ratio}
 \acro{SPM}{Statistical Parametric Mapping}
