--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusions}
+\section{Conclusions}
 \label{sec:Conclusion}
 This work has demonstrated the use of the particle filter to
 learn parameters of the BOLD model. Since the inception of the
