--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -1,13 +1,14 @@
 \chapter{Methods}
 \label{sec:Methods}
 Although the particle filter  is a standard Regularized
-Particle filter, as described by Arulampalam et al., optimizing the
-particle filter for use with FMRI data is non-trivial \cite{Arulampalam2002a}.
+Particle filter, as described by Arulampalam et al.
+ \cite{Arulampalam2002a}, optimizing the
+particle filter for use with \ac{fMRI} data is non-trivial.
 
 
 \section{Model}
 As originally written in \autoref{sec:BOLD Physiology} the state variables
-for the BOLD model are as follows:
+for the \ac{BOLD} model are as follows:
 \begin{eqnarray}
 \dot{s} &=& \epsilon u(t) - \frac{s}{\tau_s} - \frac{f - 1}{\tau_f} \\
 \dot{f} &=& s\\
@@ -23,7 +24,7 @@ Because the purpose of this particle filter is to learn the underlying distribut
 of the static parameters, rather than precisely modeling the time course of the
 in the dynamic state variables $\{s,f,v,q\}$ this noise is left out. It also helps
 that detrending is applied before the particle filter and that the
-BOLD model is dissipative. When no stimuli are applied, all the particles
+\ac{BOLD} model is dissipative. When no stimuli are applied, all the particles
 decay to $\{0,1,1,1\}$. Typical particle filters
 also use this state noise as an exploratory measure; however, this method is
 less necessary when good priors are available, and when regularized particle filtering
@@ -32,39 +33,83 @@ is being used.
 For all the analysis  in this work, $1400$ integration points
 per second were used.  Typically a step size of $0.001$ was sufficient,
 however, from time to time $0.001$ can still result in problems for the
-BOLD model.
+\ac{BOLD} model.
 
 \section{Preprocessing}
 \label{sec:Methods Preprocessing}
 The normal pipeline for analyzing
-FMRI involves a several preprocessing steps. The first and most important
+\ac{fMRI} involves a several preprocessing steps to condition the signal.
+The first and most important
 task is motion correction. To do this, a single volume in time is chosen, and
 volumes at every other time point are realigned to best match the target volume. This corrects
 for motion by the patient as well as small changes in the magnetic
 fields that cause the image to shift.
 In conventional statistical parametric mapping, a Gaussian smoothing
 filter is applied across the image as discussed in \autoref{sec:RFT}.
-After this detrending is performed, which is discussed in \autoref{sec:Detrend}.
-Recall that FMRI signal levels are unit-less and though detrending is not
+After this, detrending is performed, which is discussed in \autoref{sec:Detrend}.
+Recall that \ac{fMRI} signal levels are unit-less and though detrending is not
 always necessary, the data must always be converted
 into \% difference from baseline.
 The generally accepted method is to use a high pass filter, although the
 cutoff frequency is application dependent and often applied haphazardly.
 Before going into the detrending used in this work, it is necessary to
-discuss the type of noise present in FMRI.
+discuss the type of noise present in \ac{fMRI}.
 
 \subsection{BOLD Noise}
 \label{sec:Introduction Noise}
-As demonstrated in \autoref{sec:BOLD Physiology} the BOLD response has been
-extensively studied and despite minor discrepancies, the cause of the BOLD
-signal is well known. However, as FMRI detects an
+\begin{figure}
+\centering
+\subfigure[]{\label{fig:QQDC:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_29_49_9}}
+\subfigure[]{\label{fig:QQDC:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_34_43_24}}
+\subfigure[]{\label{fig:QQDC:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_22_38_23}}
+\subfigure[]{\label{fig:QQDC:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_37_29_24}}
+\caption[Resting State Noise Analysis.]{Resting state noise analysis.
+From Left to Right:
+(resting state) signal, Q-Q Plot of measurements with the standard Normal,
+Signal auto-regression, Histogram of the Points}
+\label{fig:QQDC}
+\end{figure}
+
+\begin{figure}
+\centering
+\subfigure[]{\label{fig:QQDDelta:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_29_49_9}}
+\subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_34_43_24}}
+\subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_22_38_23}}
+\subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_37_29_24}}
+\caption[Resting State Noise Analysis, Steps]{Resting state noise analysis, where
+signal levels are the difference between adjacent signals in \autoref{fig:QQDC}.
+From Left to Right:
+(resting state) signal, Q-Q Plot of measurements with the standard Normal,
+Signal auto-regression, Histogram of the Points}
+\label{fig:QQDelta}
+\end{figure}
+
+\begin{figure}
+\centering
+\subfigure[]{\label{fig:QQs:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_29_49_9}}
+\subfigure[]{\label{fig:QQs:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_34_43_24}}
+\subfigure[]{\label{fig:QQs:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_22_38_23}}
+\subfigure[]{\label{fig:QQs:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_37_29_24}}
+\caption[Resting State Noise Analysis, After Subtracting Spline]
+{Resting State Noise Analysis, where
+signal levels are the result of subtracting a spline from the signal in 
+\autoref{fig:QQDC}.
+From Left to Right:
+(resting state) signal, Q-Q Plot of measurements with the standard Normal,
+Signal auto-regression, Histogram of the Points}
+\label{fig:QQSpline}
+\end{figure}
+
+As demonstrated in \autoref{sec:BOLD Physiology} the \ac{BOLD} response has been
+extensively studied and despite minor discrepancies, the cause of the \ac{BOLD}
+signal is well known. However, as \ac{fMRI} detects an
 aggregate signal over the space of cubic centimeters, there are
 plenty of noise sources. Though local neurons act
 together (i.e. around the same time), the density of neurons, the
 density of capillaries, and slight differences in activation across
-a particular voxel can all lead to signal attenuation and noise.
+a particular voxel can all lead to signal attenuation and structured noise.
 
-A particularly difficult form of noise present in FMRI is a low frequency
+A particularly difficult form of noise present in \ac{fMRI} is a low frequency
 drift, often characterized as a Wiener process \cite{Riera2004}.
 Though not present in all regions, as many as ten to fifteen percent
 of voxels can be affected \cite{Tanabe2002}, thus it is prevalent enough to cause significant
@@ -72,13 +117,13 @@ inference problems \cite{Smith2007}. It is still not
 clear what exactly causes this noise, although one possibility is
 the temperature difference in scanner magnetic coils \cite{Smith2007}.
 It is clear that this drift signal is not solely
-due to a physiological effects, given its presence in cadavers and phantoms
+due to physiological effects, given its presence in cadavers and phantoms
 \cite{Smith1999}. Interestingly, it is usually spatially correlated, and
 more prevalent at interfaces between regions. Though one potential source
 could be slight movement, co-registration is standard, making this unlikely.
 Regardless, the problem mandates the use of a high pass filter \cite{Smith2007}.
 
-In order to characterize the noise, I analyzed resting state data.
+In order to characterize the noise, resting state data was analyzed.
 During resting state, the patient is shown no images, and he is asked
 to avoid movement and complex thought.  Overall there should be
 very little activation, and thus the signal consists entirely of noise.
@@ -91,51 +136,14 @@ of noise found in the resting state data.
 The resting state was gathered in the exact same way as the data in
 \autoref{sec:ExperimentConfig}, except without the stimuli.
 
-\begin{figure}
-\centering
-\subfigure[]{\label{fig:QQDC:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_29_49_9}}
-\subfigure[]{\label{fig:QQDC:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_34_43_24}}
-\subfigure[]{\label{fig:QQDC:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_22_38_23}}
-\subfigure[]{\label{fig:QQDC:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_37_29_24}}
-
-%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_19-24-10.pdf}}
-%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_20-45-18.pdf}}
-%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_23-47-18.pdf}}
-%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_35-49-9.pdf}}
-
-\caption{Q-Q Plots of normalized resting state data}
-\label{fig:QQDC}
-\end{figure}
-
-\begin{figure}
-\centering
-\subfigure[]{\label{fig:QQDDelta:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_29_49_9}}
-\subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_34_43_24}}
-\subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_22_38_23}}
-\subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_37_29_24}}
-\caption{Q-Q Plots of resting state data, using the BOLD signal steps.}
-\label{fig:QQDelta}
-\end{figure}
-
-
-\begin{figure}
-\centering
-\subfigure[]{\label{fig:QQs:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_29_49_9}}
-\subfigure[]{\label{fig:QQs:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_34_43_24}}
-\subfigure[]{\label{fig:QQs:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_22_38_23}}
-\subfigure[]{\label{fig:QQs:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_37_29_24}}
-\caption{Q-Q Plots of resting state data, after the de-trending}
-\label{fig:QQSpline}
-\end{figure}
-
 Because most methods (including the one used in this paper)
 assume the noise realizations are independent of each other, the autocorrelation
 is of particular interest (which is a necessary but not
 sufficient condition for independence). Gaussianity is also a common
-assumption made in studies of FMRI data, though that assumption is not
+assumption made in studies of \ac{fMRI} data, though that assumption is not
 needed in this work. Regardless, comparing the distribution to a Gaussian
 is informative, so Q-Q plots are used to compare example data with the
-Normal distribution. Additionally, in FMRI data, the noise is often considered
+Normal distribution. Additionally, in \ac{fMRI} data, the noise is often considered
 to be Wiener \cite{Riera2003}. Recall that a Wiener random process is
 characterized by steps that are independent and Gaussian. The simulations discussed in
 \autoref{sec:Single Voxel Simulation} make use of this,
@@ -163,13 +171,16 @@ do not seem to fit the Gaussian well. Also note the significant autocorrelation 
 \autoref{fig:QQDC:C} and \autoref{fig:QQDC:D}. As expected, the noise is not strictly
 Gaussian white noise.  On the other hand, the steps do conform rather
 closely to the normal distribution.
-As expected, most of the autocorrelation disappears for the step data. Given
+As expected, most of the autocorrelation disappears for the step data
+(\autoref{fig:QQDelta}). Given
 that the steps seem to fit the Normal distribution, the low autocorrelation
 indicates that the steps could be Independently Distributed.
 Therefore, the noise is consistent with a Wiener process.
 
 Detrending the time-series by subtracting a spline fit to the distribution
-removed much of the autocorrelation present in \autoref{fig:QQDC:C} and \autoref{fig:QQDC:D},
+(\autoref{fig:QQSpline})
+removed much of the autocorrelation present in \autoref{fig:QQDC:C} and 
+\autoref{fig:QQDC:D},
 though not perfectly. Though the distributions still do not exactly fit
 the Normal, \autoref{fig:QQs:D} is much improved compared to \autoref{fig:QQDC:D}.
 In all, the detrending is effectively removing Wiener noise.
@@ -177,20 +188,21 @@ In all, the detrending is effectively removing Wiener noise.
 \subsection{Detrending}
 \label{sec:Detrend}
 The non-stationary
-aspect of a Weiner process, presumably the result of integrating some
+aspect of a Wiener process, presumably the result of integrating some
 $\nu_x$, is difficult to compensate for, and so many methods
-have been developed to compensate for it. Tanabe et al. and Smith et al.
+have been developed to compensate for it. Tanabe et al. \cite{Tanabe2002}
+and Smith et al. \cite{Smith1999}
 demonstrated that this component is prevalent, and may in fact be an inherent  characteristic
-of FMRI \cite{Tanabe2002, Smith1999}. It has been reported that in some studies as
+of \ac{fMRI}. It has been reported that in some studies as
 many as half the voxels
 benefited from detrending \cite{Smith2007}. In comparison of high pass 
 filters, 
-Tanabe et al.  showed that in most cases subtracting off
-a spline worked the best \cite{Tanabe2002}.
+Tanabe et al. \cite{Tanabe2002} showed that in most cases subtracting off
+a spline worked the best.
 Unfortunately no method will
 perfectly remove noise, and no method will leave the signal untouched.
 
-The method I used to calculate the spline was one knot for every 20
+The method used to calculate the spline was one knot for every 20
 measurements in an image. Thus a 10 minute session at a repetition time of
 2.1 seconds would have 19 knots. The first and last knots were each
 given half the number of samples as the rest of the knots; which were all
@@ -203,33 +215,36 @@ to be designed with this in mind.
 
 Problematically, after removing the DC component of the signal,
 by definition the signal will have a median near zero.
-Unfortunately this is not the natural state of the BOLD signal. More specifically,
-when the signal is inactive, the BOLD response should be at 0\% change from
+Unfortunately this is not the natural state of the \ac{BOLD} signal. More specifically,
+when the signal is inactive, the \ac{BOLD} response should be at 0\% change from
 the base level; activation may then increase, or for short periods decrease from this base.
-Because most of the BOLD signal is above baseline, after removing the spline
+Because most of the \ac{BOLD} signal is above baseline, after removing the spline
 the resting state will be below 0\%.
 One method of accounting for this is to simply add a DC gain model parameter.
 Like all the other model parameters, with enough measurements, the particle filter
 would be able to settle on a good estimate. Yet adding another dimension increases the
 complexity of the model, for a parameter that is relatively easy to estimate
 by visual inspection.  In this work a simpler approach was used. To determine
-the DC gain I used a robust estimator of scale. The Median Absolute Deviation (MAD)
-proved to be accurate in determining how much to shift the signal up
-by. I tested both methods during the course of analysis, and found that the increase
+the DC gain a robust estimator of scale was used. The 
+\ac{MAD} proved to be accurate in determining how much to shift the signal up
+by. Both methods analysis were tested, and it was found that the increase
 in model complexity far outweighed the slight increase in flexibility. Other
-methods may work better, however the MAD worked well,
-as \autoref{fig:PreprocessedLowNoise} and \autoref{fig:PreprocessedHighNoise} show.
+methods may work better, however the \ac{MAD} worked well,
+as \autoref{fig:PreprocessedLowNoise} and 
+\autoref{fig:PreprocessedHighNoise} show. The \ac{DC} gain was then set to:
 
 \begin{equation}
 y_{\text{gain}, 0:K} = 1.4826\underset{i=0:K}{\text{median}}(y_i - \text{median}(y_{0:K}))
 \label{eq:mad}
 \end{equation}
 
+For more information on the \ac{MAD}, it is discussed in great detail in
+Iglewicz's text on robust estimation \cite{iglewicz1983robust}.
 A serious concern when adding constant values to
 real data is whether this will create false positives. This is a legitimate
-concern; however, a boosted response does not effect how well the BOLD model
-predicts the actual measurements; and as mentioned before, the DC signal of FMRI
-is never used.
+concern; however, a boosted response does not affect how well the \ac{BOLD} model
+predicts the actual measurements; and as mentioned before, the DC signal 
+of \ac{fMRI} is never used.
 
 \section{Particle Filter Settings}
 There are quite a few options when using a particle filter; therefore this
@@ -237,50 +252,56 @@ section will discuss the design choices made in this work.
 
 \subsection{Prior Distribution}
 \label{sec:PriorDist}
-For the BOLD model described in \autoref{sec:BOLD Physiology}, several
+For the \ac{BOLD} model described in \autoref{sec:BOLD Physiology}, several
 different studies have endeavored to calculate parameters. The results
 of these studies may be found in \autoref{tab:Params}, and the methods
 used for each may be found in \autoref{sec:Prior Works}. Unfortunately,
-Friston et al. only studied regions deemed active by the General
+Friston et al. \cite{Friston2002b} only studied regions deemed active 
+by the General
 Linear Model; and most other research used these results as
-the source for their priors \cite{Friston2002}.
-The one exception is to this is Johnston et al. which came to a extremely different
-distributions \cite{Johnston2008}. For a particle filter, the choice of a prior is
+the source for their priors.
+The one exception is to this is Johnston et al. \cite{Johnston2007} 
+which came to extremely different distribution. For a particle filter, 
+the choice of a prior is
 the single most important design decision. A very wide prior will require
 more particles to be sufficiently dense, a very thin (low variance) prior may miss
 the true parameters. Consequently, for this work it was natural
 to use priors that would give results consistent with previous works
-\cite{Friston2002}. This constrains the usefulness of the model to
+\cite{Friston2002b}. This constrains the usefulness of the model to
 areas that fall within the prior distribution, yet allowed results
 to be comparable to other works. There is a significant need for better
 estimates of the physiological parameters; and, while physical experiments
 may not be possible, it would not be unreasonable to do a study with
 exhaustive simulated annealing or hill climbing tests for multiple
-regions and multiple patients. That said, a significant amount of
-indeterminateness exists in the parameters, which is discussed in
+regions and multiple patients. That said, the parameters may  not be
+strictly identifiable, which is discussed in
 \autoref{sec:Single Voxel Simulation}
 
 \begin{figure}
 \centering
 \includegraphics[trim=6cm 2cm 6cm 2cm,width=15cm]{images/mean_response}
-\caption{Response to $0.1s$ impulses with the mean parameters from \cite{Friston2000}}
+\caption{Response to $0.1s$ impulses with the mean parameters from 
+Friston et al. \cite{Friston2000b}}
 \label{fig:MeanResponseF}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[trim=6cm 2cm 6cm 2cm,width=15cm]{images/mean_response_johnston}
-\caption{Response to $0.1s$ impulses with the mean parameters from \cite{Johnston2008}}
+\caption{Response to $0.1s$ impulses with the mean parameters from 
+Johnston et al. \cite{Johnston2007}}
 \label{fig:MeanResponseJ}
 \end{figure}
 
-The differences between the parameter estimates of Johnston et al. and
-Friston et al. are clearly visible in \autoref{fig:MeanResponseJ} and
-\autoref{fig:MeanResponseF} \cite{Johnston2008,Friston2002}.
-Therefore, to account for these discrepancies, I used tests on
-real data to adjust the distributions from those arrived at in
-Friston et al. \cite{Friston2002}. In tests on real data, the Johnston et al.
-distributions never converged to meaningful BOLD estimates.
+The differences between the parameter estimates of Johnston et al.
+\cite{Johnston2007} and
+Friston et al. \cite{Friston2002b} are clearly visible in 
+\autoref{fig:MeanResponseJ} and \autoref{fig:MeanResponseF}.
+Therefore, to account for these discrepancies, tests on
+real data was used to adjust the distributions from those arrived at in
+Friston et al. \cite{Friston2002b}. In tests on real data, the Johnston et al.
+\cite{Johnston2007}
+distributions never converged to meaningful \ac{BOLD} estimates.
 The priors used in the particle filter may be found in \autoref{tab:Prior}.
 
 \begin{table}[t]
@@ -303,11 +324,11 @@ $\epsilon$ & Gamma & .7  & .6 \\
 \end{table}
 
 Note that although the mean remains the same for all the
-parameters other than $\epsilon$, the standard deviation were
+parameters other than $\epsilon$, the standard deviations were
 adjusted based on tests with real data. Also, the state variables
 were all assumed to be at rest at the beginning of the simulation.
 
-It is also import to use enough particles to obtain a
+It is also important to use enough particles to obtain a
 sufficiently dense approximation of the prior. For 7 dimensions,
 getting a dense prior is difficult. Insufficiently
 dense particles will result in inconsistent results. Of course the
@@ -332,13 +353,14 @@ When regularizing, the Gaussian kernel is convenient,
 because it is simple to sample from and long tailed.
 As discussed in \autoref{sec:Particle Filter Resampling},
 as long as resampling is kept as a last resort, some over-smoothing
-doesn't impair convergence. Therefore, for this work I chose a Gaussian kernel of
-bandwidth equal to the original distribution's covariance. This
+doesn't impair convergence. Therefore, for this work a Gaussian kernel of
+bandwidth equal to the original distribution's covariance was used. This
 applies a large amount of smoothing to the distribution; however, on average
-resampling was only applied every 20 to 30 measurements, and because randomization
-is being applied to model updates this gives the filter some mobility.
+resampling was only applied every 20 to 30 measurements. At this rate,
+regularized resampling still gives the filter some ability to explore
+state space, without excessively revering convergence.
 
-Resampling is a not strictly necessary, but it increases the effectiveness
+Resampling is not strictly necessary, but it increases the effectiveness
 of the particle filter by adjusting the support to emphasize areas
 of higher probability. Resampling is slow because it requires redrawing
 all the particles. It also closes off avenues of investigation, but is
@@ -375,40 +397,41 @@ function is slow convergence.  On the other hand, an overly thin
 distribution will lead to particle deprivation (all particles
 being zero-weighted). Three weighting functions were
 tested. In addition to the Gaussian I also tested the Laplace and Cauchy
-distributions, both of which have wide tales.
+distributions, both of which have heavy tales.
 Wider tailed distributions don't down-weight
 particles as fast; and thus converge more slowly.
 The Laplace distribution also has the
 benefit of a non-zero slope at the origin; meaning it
 differentiates between particles even near the origin.
 
-After trial and error, for this thesis I chose the Gaussian with a standard deviation
-of $0.005$. Although using an adaptive weighting function
+After trial and error, for this thesis the Gaussian with a standard deviation
+of $0.005$ was used. Although using an adaptive weighting function
 might be better, in tests this often led to unpredictable results.
 With some work it may be possible to set the standard deviation by
 taking a small sample from resting data and using the sample standard deviation.
-In this work, however, I set the standard deviation manually at $0.005$,
+In this work, however, the standard deviation was manually set at $0.005$,
 because it gave the best consistency.
 
 \subsection{Runtime}
-The run-time for a single voxel depends on the several factors. First, the
-overall length of the signal being analyzed. For 1000 measurements it takes
-approximately 6 minutes. On the other hand, in real circumstances the
-length tends to be around 150 measurements which takes around 40 seconds (for 1000
-particles, 1400 integration points and a Quad Core CPU). The size of
-integration steps are also crucial. Using step sizes above
+The run-time for a single voxel depended on several factors. First, the
+overall length of the signal being analyzed directly scaled the run-time. 
+For 1000 measurements it took
+approximately 6 minutes. On the other hand, in real \ac{fMRI} the
+length tends to be around 150 measurements which took around 40 seconds 
+(for 1000 particles, 1400 integration points and a Quad Core CPU). The number of
+integration steps was also crucial. Using step sizes above
 $0.001$ seconds is not recommended. In most cases millisecond resolution
-is fine; however, when generating simulated data I found that at times it was
-still not enough. This is problematic in the actual particle
+was fine; however, when generating simulated data at times this was
+still not enough. This could cause problems in the actual particle
 filter since, given the large number of simultaneous integrations taking
-place, its probable that a few particles will fail and be unfairly thrown away.
+place, its probable that a few particles would fail and be unfairly thrown away.
 To prevent such events, 1400 integration points per second were used throughout
 the tests.
 
 Because the prior is initially represented with significantly more
 particles, if for some reason the effective
 number of particles stays high, resampling could take a long time to occur.
-For this reason, rather than allowing the particle filter to continue on
+For this reason, rather than allowing the particle filter to continue 
 with this large number of particles, after 20 seconds have passed the
 algorithm forces resampling. The choice of 20 seconds is
 arbitrary, but at the very least it gives the particles time to be weighted.
